--- a/spec/fixtures/usgs_service/sample_csv_fragments.yml
+++ b/spec/fixtures/usgs_service/sample_csv_fragments.yml
@@ -1,9 +1,10 @@
 ---
-3_rows_2_valid: |
+sample_set: |
   Src,Eqid,Version,Datetime,Lat,Lon,Magnitude,Depth,NST,Region
   ci,15329401,2,"Friday, April 19, 2013 07:16:30 UTC",32.8752,-116.2557,1.6,6.20,40,"Southern California"
   invalid,data,not,going,to,work
   ak,10691420,3,"Thursday, April 11, 2013 12:35:04 UTC",60.1563,-140.7970,1.5,15.70,17,"Southern Yukon Territory, Canada"
+  hv,60491896,2,"Monday, April 22, 2013 23:49:39 UTC",19.6110,-155.0705,2.3,14.90,37,"Island of Hawaii, Hawaii"
 
 sample_parsed_row_data:
   :src: 'ci'
@@ -16,7 +17,3 @@ sample_parsed_row_data:
   :depth: '3.40'
   :nst: ' 7'
   :region: 'Northern California'
-
-csv_parse_example: |
-  test,CSV,data
-  1,2,3
